fix : 코드정리